# copenhagen

./: .dockerignore  .gitignore  ALGORITHM.md  APPROACH.md  BENCHMARKS.md  Dockerfile  IVFPQ.md  LICENSE  QUANTIZATION_GOAL.md  README.md  STATUS.md  TODO.md  copenhagen.md  data  divf_ideas_for_ivf.md  pyproject.toml  run_benchmarks.sh  setup.py
.github/workflows/: ci.yml  cpp-verify.yml  pypi.yml
benchmarks/: _bench_common.py  _turbovec_runner.py  bench_score_ip.cpp  benchmark_copenhagen.py  benchmark_drift.py  benchmark_drift_medium.py  benchmark_drift_safe.py  benchmark_drift_streaming.py  benchmark_drift_tiny.py  benchmark_dynamic_vs_faiss.py  benchmark_hnsw_churn.py  benchmark_insert_scaling.py  benchmark_ivf_churn.py  benchmark_log.txt  benchmark_stress.py  benchmark_vs_faiss.py  benchmark_vs_hnsw.py  benchmark_vs_turbovec.py  download_data.py  reproduce.py  run_benchmarks.py
docs/: Makefile
docs/source/: benchmarks.rst  conf.py  index.rst  theory.rst
python/core/: __init__.py
src/: block_quant.hpp  block_quant_py.cpp  build.sh  build_block_vq.sh  dynamic_ivf.cpp  tq_aniso_signif.cpp  tq_aniso_test.cpp  tq_block_test.cpp  tq_fastscan.hpp  tq_standalone_test.cpp  turbo_quant.hpp
tests/: bench_gpu.py  bench_search.py  conftest.py  smoke_test.py  stress_test.py  test_copenhagen.py  test_fastscan_recall.py  test_gpu.py
verify/scripts/: llm_verify.py
