[build-system]
requires = ["setuptools>=61", "wheel", "pybind11>=2.11"]
build-backend = "setuptools.build_meta"

[project]
name = "copenhagen"
version = "0.1.0"
description = "Copenhagen — Dynamic IVF index with quantum-inspired updates and adaptive cluster rebalancing"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Alexander Kolpakov", email = "akolpakov@uaustin.org"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0,<3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["python*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "bench_*.py"]
markers = [
    "gpu: tests that initialise a GPU/MPS context (run separately from faiss tests)",
    "faiss: tests that load the FAISS library (run separately from gpu tests)",
]
